# jlcpcb_api

./: .gitignore  README.md  pyproject.toml
src/jlcpcb_api/: __init__.py  auth.py  client.py  errors.py  models.py
tests/: test_auth.py  test_client.py  test_models.py
