[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jlcpcb-api"
version = "0.1.0"
description = "Python client reverse-engineered from the JLCPCB overseas Java SDK."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "cryptography>=42.0.0",
  "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
